--- a/pom.xml
+++ b/pom.xml
@@ -6,15 +6,55 @@
 
     <groupId>com.et.toolset</groupId>
     <artifactId>ETToolset</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0.0-pre1</version>
+    <packaging>jar</packaging>
+
+    <name>ETToolset</name>
+    <description>A Simple Lib to Shorten and Optimize Your Coding Expression</description>
+    <url>https://github.com/Enderman-TPing/ETToolset</url>
+
+    <licenses>
+        <license>
+            <name>GNU General Public License v3.0</name>
+            <url>https://www.gnu.org/licenses/gpl-3.0.md</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
+
+    <developers>
+        <developer>
+            <id>Enderman-Teleporting</id>
+            <name>Yuheng Wang</name>
+            <email>sherrikevin5143@gmail.com</email>
+        </developer>
+        <developer>
+            <id>Enderman-TPing</id>
+            <name>Yuheng Wang</name>
+            <email>enderman142857@outlook.com</email>
+        </developer>
+    </developers>
+
+    <scm>
+        <url>https://github.com/Enderman-TPing/ETToolset</url>
+        <connection>scm:git:https://github.com/Enderman-TPing/ETToolset.git</connection>
+        <developerConnection>scm:git:https://github.com/Enderman-TPing/ETToolset.git</developerConnection>
+        <tag>HEAD</tag>
+    </scm>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
-    <dependencies>
-
-    </dependencies>
+    <distributionManagement>
+        <repository>
+            <id>apache-repo</id>
+            <url>https://repository.apache.org/content/repositories/releases/</url>
+        </repository>
+        <snapshotRepository>
+            <id>apache-snapshots</id>
+            <url>https://repository.apache.org/content/repositories/snapshots/</url>
+        </snapshotRepository>
+    </distributionManagement>
 
 </project>
