--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>io.github.enderman-tping</groupId>
     <artifactId>ETToolset</artifactId>
-    <version>1.0.0-pre3</version>
+    <version>1.0.0</version>
     <packaging>jar</packaging>
 
     <name>ETToolset</name>
